--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,10 @@
+POSTGRES_USER=attend
+POSTGRES_PASSWORD=attend_secret
+POSTGRES_DB=attendtrack
 DATABASE_URL=postgresql+asyncpg://attend:attend_secret@db:5432/attendtrack
 SECRET_KEY=change-me-in-production
 ACCESS_TOKEN_EXPIRE_MINUTES=15
 REFRESH_TOKEN_EXPIRE_HOURS=24
-# Для тестирования: true = вход без 2FA (только для dev, не для продакшена)
-DISABLE_2FA_FOR_TESTING=true
+
+# Для тестирования: true = вход без 2FA 
+DISABLE_2FA_FOR_TESTING=false
